fix z-index problem for folder

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+body {
+  background-color: black;
+}
 @font-face {
   font-family: "Diatype";
   src: url("/fonts/ABCDiatypeRoundedVariable-Trial.ttf") format("truetype");
